--- a/styles/style.css
+++ b/styles/style.css
@@ -1,79 +1,96 @@
 body{
-    background: rgb(228, 235, 229);
+  background: rgb(228, 235, 229);
 }
 .nav-link{
-    color: white;
+  color: white;
 }
+/* Para disppositivos pequeños */
+@media screen and (max-width: 480px) {
+  body {
+    background-color: darkslategrey;
+    color: white;
+  }
+  .oculto {
+    display: none;
+}
+.label-input100{
+  color: white;
+  font-size: 14px;
+  line-height: 1.5;
+  padding-left: 7px;
+}
+}
+/* Fin Para disppositivos pequeños */
 .carousel-item h1 
 {
 color:#fff;
 font-size: 20px;
-    margin: 75px auto;
-    text-align: center;
+  margin: 75px auto;
+  text-align: center;
 }
 .login-block 
 {
-  
-    width: 50%;
-    margin: 0 auto;
+
+  width: 50%;
+  margin: 0 auto;
 
 }
 .signup__overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.76); 
-  background-color: rgba(0, 0, 0, 0.33);
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: rgba(0, 0, 0, 0.76); 
+background-color: rgba(0, 0, 0, 0.33);
 }
 .login_sec
 {
-  
-    padding: 0px;
-    background-color: #f8fafb;
+
+  padding: 0px;
+  background-color: #f8fafb;
 
 }
 .login_sec img 
 {
-  
-    margin: 24px auto;
+
+  margin: 24px auto;
 
 }
 .banner-sec {
-  background: url(https://static.pexels.com/photos/33972/pexels-photo.jpg) no-repeat left bottom;
-  background-size: cover;
-  min-height: 500px;
-  border-radius: 0 10px 10px 0;
-  padding: 0;
+background: url(https://static.pexels.com/photos/33972/pexels-photo.jpg) no-repeat left bottom;
+background-size: cover;
+min-height: 500px;
+border-radius: 0 10px 10px 0;
+padding: 0;
 }
 
 
 
 .carousel-fade .carousel-item {
-  opacity: 0;
-  transition-duration: .6s;
-  transition-property: opacity;
+opacity: 0;
+transition-duration: .6s;
+transition-property: opacity;
 }
 
 .carousel-indicators {
 
-  bottom: -41px;
+bottom: -41px;
 }
 
 .carousel-indicators .active {
-  background-color: #fff;
+background-color: #fff;
 }
 
 .carousel-fade .carousel-item.active,
 .carousel-fade .carousel-item-next.carousel-item-left,
 .carousel-fade .carousel-item-prev.carousel-item-right {
-  opacity: 1;
+opacity: 1;
 }
 
 .carousel-fade .active.carousel-item-left,
 .carousel-fade .active.carousel-item-right {
-  opacity: 0;
+opacity: 0;
 }
 
 .carousel-fade .carousel-item-next,
@@ -81,65 +98,57 @@ font-size: 20px;
 .carousel-fade .carousel-item.active,
 .carousel-fade .active.carousel-item-left,
 .carousel-fade .active.carousel-item-prev {
-  transform: translateX(0);
-  transform: translate3d(0, 0, 0);
+transform: translateX(0);
+transform: translate3d(0, 0, 0);
 }
 
-.container {
-
--webkit-box-shadow: 0 0.1875rem 1.5rem rgba(0, 0, 0, 0.2);
-box-shadow: 0 0.1875rem 1.5rem rgba(0, 0, 0, 0.2);
-border-radius: 0.375rem;
-margin-bottom: 5%;
-
-}
 
 .carousel-inner {
-  border-radius: 0 10px 10px 0;
+border-radius: 0 10px 10px 0;
 }
 
 .carousel-caption {
-  text-align: left;
-  left: 5%;
+text-align: left;
+left: 5%;
 }
 
 .login-sec {
-  padding: 50px 30px;
-  position: relative;
+padding: 50px 30px;
+position: relative;
 }
 
 .login-sec .copy-text {
-  position: absolute;
-  width: 80%;
-  bottom: 20px;
-  font-size: 13px;
-  text-align: center;
+position: absolute;
+width: 80%;
+bottom: 20px;
+font-size: 13px;
+text-align: center;
 }
 
 .banner-text {
-  width: 70%;
-  position: absolute;
-  bottom: 40px;
-  padding-left: 20px;
+width: 70%;
+position: absolute;
+bottom: 40px;
+padding-left: 20px;
 }
 
 .banner-text h2 {
-  color: #fff;
-  font-weight: 600;
+color: #fff;
+font-weight: 600;
 }
 
 .banner-text h2:after {
-  content: " ";
-  width: 100px;
-  height: 5px;
-  background: #FFF;
-  display: block;
-  margin-top: 20px;
-  border-radius: 3px;
+content: " ";
+width: 100px;
+height: 5px;
+background: #FFF;
+display: block;
+margin-top: 20px;
+border-radius: 3px;
 }
 
 .banner-text p {
-  color: #fff;
+color: #fff;
 }
 
 
@@ -147,92 +156,82 @@ margin-bottom: 5%;
 /*.......................................... login start ...........................*/
 
 .container-login100-form-btn {
-  margin: 0 auto;
-  display: block;
-    text-align: center;
-    padding-top: 1%;
-    padding-bottom: 2%;
+margin: 0 auto;
+display: block;
+  text-align: center;
+  padding-top: 1%;
+  padding-bottom: 2%;
 }
 
 .login100-form {
-  width: 100%;
+width: 100%;
 }
 
 
 .validate-input {
-  position: relative;
+position: relative;
 }
 
 .wrap-input100 {
-  width: 100%;
-  position: relative;
-  border-bottom: 2px solid #d9d9d9;
-  margin-bottom: 5%;
-}
-
-.label-input100 {
-
-  font-size: 14px;
-  color: #333333;
-  line-height: 1.5;
-  padding-left: 7px;
+width: 100%;
+position: relative;
+border-bottom: 2px solid #d9d9d9;
+margin-bottom: 5%;
 }
 
 textarea:focus,
 input:focus {
-  border-color: transparent !important;
+border-color: transparent !important;
 }
 
 .input100 {
-  font-size: 12px;
-  color: #333333;
-  line-height: 1.2;
-  display: block;
-  width: 100%;
-  height: 30px;
-  background: transparent;
-  padding: 0 7px 0 43px;
+font-size: 12px;
+color: #333333;
+line-height: 1.2;
+display: block;
+width: 100%;
+height: 30px;
+background: transparent;
+padding: 0 7px 0 43px;
 }
 
 input {
-  outline: none;
-  border: none;
+outline: none;
+border: none;
 }
 
 .flex-c-m {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  -ms-align-items: center;
-  align-items: center;
+display: -webkit-box;
+display: -webkit-flex;
+display: -moz-box;
+display: -ms-flexbox;
+display: flex;
+justify-content: center;
+-ms-align-items: center;
+align-items: center;
 }
 
 .login100-social-item {
-  font-size: 12px;
-  color: #fff;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 28px;
-  height: 28px;
-  border-radius: 50%;
-  margin: 5px;
+font-size: 12px;
+color: #fff;
+display: -webkit-box;
+display: -webkit-flex;
+display: -moz-box;
+display: -ms-flexbox;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 28px;
+height: 28px;
+border-radius: 50%;
+margin: 5px;
 }
 
 .bg1 {
-  background-color: #3b5998;
+background-color: #3b5998;
 }
 
 
 .bg3 {
-  background-color: #ea4335;
+background-color: #ea4335;
 }
-
-
